networkpolicy/networkpolicy__basic_kafka_setup__grafana__internet__any__egress__ports__80-443-9090__nr66__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana--internet--any--egress--ports--80-443-9090--nr66
  namespace: grafana
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 9090
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 80
